let the image size be larger on view details - pending then onload of the page. is not ok - fixed view detail button color doesn't fit - fixed

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 $default-body-bg: #f5f8fa;
 $default-font-color: #575958;
-$primary-color: #172b4d;
+$primary-color: #074a74;
 
 $default-font-size: 1rem;
 $default-font-family: 'Open Sans', sans-serif;
