--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -33,7 +33,7 @@ body {
         border-left: 3px solid lighten($primary-color, 70%);
 
         span {
-            color: lighten($primary-color, 20%);
+            color: $primary-color;
             font-weight: 800;
         }
     }
@@ -78,4 +78,20 @@ body {
     th:nth-child(1), td:nth-child(1) {
         width: 30%;
     }
+}
+
+.nav-pills .nav-link {
+    color: $primary-color;
+}
+
+.nav-pills .nav-link.active {
+    background-color: $primary-color;
+}
+
+.bg-default {
+    background-color: $primary-color !important;
+}
+
+.btn-default{
+    border-color: $primary-color !important;
 }
